# foomatic-db-engine

./: .bzrignore  ChangeLog  Foomatic-Devel-Ideas.txt  Makefile.in  README  README.build-foomatic-filters-ppds  TODO  USAGE  configure.ac  configure.in  extract_pjl  foomatic-addpjloptions.8.in  foomatic-addpjloptions.in  foomatic-cleanupdrivers.in  foomatic-combo-xml.1.in  foomatic-combo-xml.c  foomatic-compiledb.1.in  foomatic-compiledb.in  foomatic-configure.1.in  foomatic-configure.in  foomatic-datafile.1.in  foomatic-datafile.in  foomatic-extract-text.in  foomatic-filters-ppds-README  foomatic-filters-ppds-install  foomatic-fix-xml.in  foomatic-getpjloptions.8.in  foomatic-getpjloptions.in  foomatic-kitload.8.in  foomatic-kitload.in  foomatic-nonumericalids.in  foomatic-perl-data.1.in  foomatic-perl-data.c  foomatic-ppd-options.1.in  foomatic-ppd-options.in  foomatic-ppd-to-xml.in  foomatic-ppdfile.1.in  foomatic-ppdfile.in  foomatic-ppdload.8.in  foomatic-ppdload.in  (+16 more)
debian/: README.Debian  TODO  changelog  control  copyright  dirs  docs  foomatic-bin.README.Debian  foomatic-bin.config  foomatic-bin.dirs  foomatic-bin.manpages  foomatic-bin.postinst  foomatic-bin.templates  presubj  rules
etc/: printcap
foomatic-templates/: pjl_enum_choice.xml  pjl_enum_option.xml  pjl_num_option.xml  pjl_string_option.xml
lib/: Makefile.PL
lib/Foomatic/: DB.pm  GrovePath.pm  PPD.pm  UIElem.pm  phonebook.pm  sqlLayer.pm  util.pm  xmlParse.pm
lib/Foomatic/filters/: notes  phonebook.pm
lib/Foomatic/filters/sql/: from.pm  sqlLayer.pm  to.pm
lib/Foomatic/filters/xml/: to.pm  xmlParse.pm
unit-tests/: foomatic-verify-xml.in
